# pso3p

./: Cargo.toml
pso3p-web/: package.json
pso3p-web/public/: index.html  manifest.json
pso3p-web/src/: actionlog.tsx  board.tsx  boardobject.tsx  cardfull.tsx  cardthumb.tsx  hand.tsx  index.css  index.tsx  pso3p.tsx  statusbar.tsx
resources/cards/: 0001 Orland.crd  0002 Kranz.crd  0003 Ino'lis.crd  0004 Sil'fer.crd  0005 Guykild.crd  0006 Kylria.crd  0007 Lura.crd  0008 Break.crd  0009 Saber.crd  0010 Handgun.crd  0011 Slicer.crd  0012 Mechgun.crd  0013 Double Saber.crd  0014 Photon Claw.crd  0015 DB's Saber.crd  0016 Soul Eater.crd  0017 Inferno Bazooka.crd  0018 Agito.crd  0019 Akiko's Frying Pan.crd  0020 P-Arm's Blade.crd  0021 P-Blade+.crd  0022 Mag.crd  0023 Shield.crd  0024 Dice Fever +.crd  0025 Rich +.crd  0026 Charity +.crd  0027 Assassin+.crd  0028 Sonic Knuckle +.crd  0029 BEARS CANE +.crd  0030 Regenerate Gear.crd  0031 WINDMILL +.crd  0032 Madam's Umbrella +.crd  0033 Meteor Smash +.crd  0034 DB's Shield.crd  0035 Combat Gear.crd  0036 S-STILL SHIELD +.crd  0037 Rika's Claw +.crd  0038 C-Bringer's Rifle +.crd  0039 Recon +.crd  0040 Sword.crd  (+660 more)
src/: action.rs  boardstate.rs  card.rs  cardlibrary.rs  deck.rs  error.rs  field.rs  fieldobject.rs  main.rs  player.rs  pso3simulation.rs  statechange.rs
src/phase/: gamestart.rs  mod.rs  phase.rs  pregamediscard.rs  roll.rs  set.rs
src/simulation/: action.rs  boardstate.rs  card.rs  cardlibrary.rs  deck.rs  fieldobject.rs  lib.rs  player.rs  pso3simulation.rs  statechange.rs
src/web/: main.rs
(+6 files in other folders)
