[package]
name = "pso3p"
version = "0.1.0"
authors = ["Jake Probst <jake.probst@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml= "0.7"
serde_json = "1.0"
rand = "0.3"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
#ws = "*"
tokio-core = "0.1"
futures = "0.1"
websocket = "0.20.2"

[lib]
name = "pso3p"
path = "src/simulation/lib.rs"

[[bin]]
name = "pso3p-serv"
path = "src/web/main.rs"